--- a/index.html
+++ b/index.html
@@ -29,7 +29,41 @@
     <link rel="stylesheet" href="css/style.css">
    
 <style>
+/* .dropbtn {
+  background-color: #000000;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+} */
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #090808;color: white;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #000000;color: #f1f1f1;}
 .login-popup{
 	position: fixed;
 	left: 0;
@@ -179,7 +213,6 @@
   -webkit-transition:all .5s cubic-bezier(0.4, 0, 1, 1);
   transition: all .5s cubic-bezier(0.4, 0, 1, 1);
 }
-
 </style>
 
 
@@ -342,6 +375,13 @@
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Apply for Franchise</a></li>
 			  <li class="nav-item"><a href="status.html" class="nav-link">Check Status</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+			  <div class="dropdown nav-item" >
+				<button class="dropbtn">Login</button>
+				<div class="dropdown-content">
+				<li class="nav-item"  ><a href="./login-page/userlogin.html" class="nav-link">User Login</a></li>
+				 <li class="nav-item"> <a href="./member login/html/memberlogin.html" class="nav-link">Member Login</a></li>
+				</div>
+			  </div>
 	        </ul>
 	      </div>
 	    </div>
