--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
 	        	<li class="nav-item active"><a href="index-2.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	
-	        	<li class="nav-item"><a href="#" class="nav-link">Franchise Opportunities</a></li>
-				<li class="nav-item"><a href="#" class="nav-link">Franchise Benefits</a></li>
+	        	<li class="nav-item"><a href="index-2.html" class="nav-link">Franchise Opportunities</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link">Franchise Benefits</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Apply Online</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
