--- a/index-2.html
+++ b/index-2.html
@@ -23,6 +23,37 @@
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+	<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #090808;color: white;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #000000;color: #f1f1f1;}
+
+
+	</style>
    
 
   </head>
@@ -60,6 +91,7 @@
 	        	<li class="nav-item"><a href="index-2.html" class="nav-link">Franchise Opportunities</a></li>
 				<li class="nav-item"><a href="index-3.html" class="nav-link">Franchise Benefits</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Apply Online</a></li>
+			  <li class="nav-item"><a href="status.html" class="nav-link">Check Status</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -243,6 +275,13 @@
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
+			  <div class="dropdown nav-item" >
+				<button class="dropbtn">Login</button>
+				<div class="dropdown-content">
+				<li class="nav-item"  ><a href="./login-page/userlogin.html" class="nav-link">User Login</a></li>
+				 <li class="nav-item"> <a href="./member login/html/memberlogin.html" class="nav-link">Member Login</a></li>
+				</div>
+			  </div>
             </ul>
 					</div>
 					<div class="col-md-6 col-lg-3 mb-md-0 mb-4">
