--- a/status.html
+++ b/status.html
@@ -76,12 +76,12 @@
            <h1 style="text-align:right; margin-right:1.5rem;margin-top:-5.5rem;"> <img src="./images/logo2.png" alt="headerbanner" width="120px" height="120px" /></h1>
 </div>
 
-        <h3 style="font-family: 'Times New Roman', Times, serif;color:#ef940a;padding-left: 12rem;margin-top: 50px;"><i>Check your Status<i></h3>
+        <h3 style="font-family: 'Times New Roman', Times, serif;color:#ef940a;padding-left: 7rem;margin-top: 50px;"><i>Check your Status<i></h3>
 
 <div style="text-align: center;margin-bottom: 50px;">
  <form method="post" action="status.php">
     <!-- <label>Enter your mobile number</label> -->
-<input type="text" placeholder="Enter your mobile number" style="padding-right:20rem;" name="number" />
+<input type="text" placeholder="Enter your mobile number" name="number" />
 <br>
 <input type="submit" style="margin-top: 0.5rem;padding-right:2rem;text-align: center;background-color: #EFEFEF;" value="&nbsp; &emsp;Submit"/>
 
