--- a/index-2.html
+++ b/index-2.html
@@ -105,7 +105,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-7 ftco-animate" style="background:rgba(0,0,0,.5);padding:5px;">
           	<h1 class="subheading">Welcome to MRF Tyer Dealership Apply 2023</h1>
-            <p><a href="about.html" class="btn btn-primary">Learn more</a> <a href="contact.html" class="btn btn-white">Contact us</a></p>
+            <p><a href="contact.html" class="btn btn-primary">Apply Now</a> <a href="contact.html" class="btn btn-white">Contact us</a></p>
           </div>
         </div>
       </div>
