--- a/member login/html/memberlogin.html
+++ b/member login/html/memberlogin.html
@@ -150,14 +150,14 @@ form .btn {
     </button>
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a href="index-2.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+        <li class="nav-item active"><a href="../../index-2.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="../../about.html" class="nav-link">About</a></li>
         
-        <li class="nav-item"><a href="../index-2.html" class="nav-link">Franchise Opportunities</a></li>
-    <li class="nav-item"><a href="../index-3.html" class="nav-link">Franchise Benefits</a></li>
-        <li class="nav-item"><a href="../contact.html" class="nav-link">Apply Online</a></li>
-        <li class="nav-item"><a href="../status.html" class="nav-link">Check Status</a></li>
-        <li class="nav-item"><a href="../contact.html" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="../../index-2.html" class="nav-link">Franchise Opportunities</a></li>
+    <li class="nav-item"><a href="../../index-2.html" class="nav-link">Franchise Benefits</a></li>
+        <li class="nav-item"><a href="../index-2.html" class="nav-link">Apply Online</a></li>
+        <li class="nav-item"><a href="../../status.html" class="nav-link">Check Status</a></li>
+        <li class="nav-item"><a href="../../contact.html" class="nav-link">Contact</a></li>
       </ul>
     </div>
   </div>
