--- a/contact.html
+++ b/contact.html
@@ -193,6 +193,7 @@
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
+							<li class="nav-item"><a href="status.html" class="nav-link">Check Status</a></li>
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
