--- a/contact.html
+++ b/contact.html
@@ -112,8 +112,8 @@
 												
 												<div class="col-md-6">
 													<div class="form-group">
-														<label class="label" for="subject">Investment</label>
-														<input type="text" class="form-control" name="investment" id="investment" placeholder="Investment">
+														<label class="label" for="subject">Enter Your Query</label>
+														<input type="text" class="form-control" name="investment" id="investment" placeholder="Query">
 													</div>
 												</div>
 												<div class="col-md-12">
