--- a/about.html
+++ b/about.html
@@ -133,6 +133,7 @@ As long as MRFTyres Franchise are there, this faith will be a permanent factor i
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
+			  <li><a href="status.html" class="py-1 d-block">check status</a></li>
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
