--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 .dropdown:hover .dropbtn {background-color: #000000;color: #f1f1f1;}
 .login-popup{
-	position: fixed;
+	position:fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -74,7 +74,7 @@
 	background-color:rgba(0,0,0,0.6);
 	visibility: hidden;
 	opacity: 0;
-	transition: all 1s ease;
+	transition: all 2s ease;
 }
 .login-popup.show{
 	visibility:visible;
@@ -571,6 +571,7 @@
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
+			  <li><a href="status.html" class="py-1 d-block">check status</a></li>
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
