--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 	        	<li class="nav-item active"><a href="index-2.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	
-	        	<li class="nav-item"><a href="#" class="nav-link">Franchise Opportunities</a></li>
-				<li class="nav-item"><a href="#" class="nav-link">Franchise Benefits</a></li>
+	        	<li class="nav-item"><a href="index-2.html" class="nav-link">Franchise Opportunities</a></li>
+				<li class="nav-item"><a href="index-2.html" class="nav-link">Franchise Benefits</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Apply Online</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -133,7 +133,8 @@ As long as MRFTyres Franchise are there, this faith will be a permanent factor i
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
-			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
+	      <li class="nav-item"><a href="status.html" class="nav-link">Check Status</a></li>
+	      <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
 					<div class="col-md-6 col-lg-3 mb-md-0 mb-4">
