--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 .dropdown:hover .dropbtn {background-color: #000000;color: #f1f1f1;}
 .login-popup{
-	position: fixed;
+	position:fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -74,7 +74,7 @@
 	background-color:rgba(0,0,0,0.6);
 	visibility: hidden;
 	opacity: 0;
-	transition: all 1s ease;
+	transition: all 2s ease;
 }
 .login-popup.show{
 	visibility:visible;
@@ -402,7 +402,11 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-7 ftco-animate" style="background:rgba(0,0,0,.5);padding:5px;">
           	<h1 class="subheading">Welcome to MRF Tyres Franchises Apply</h1>
-            <p><a href="about.html" class="btn btn-primary">Learn more</a> <a href="contact.html" class="btn btn-white">Contact us</a></p>
+<!-- <<<<<<< second -->
+            <p><a href="about.html" class="btn btn-primary">Apply Now</a> <a href="contact.html" class="btn btn-white">Contact us</a></p>
+<!-- ======= -->
+            <p><a href="contact.html" class="btn btn-primary">Apply Now</a> <a href="contact.html" class="btn btn-white">Contact us</a></p>
+<!-- >>>>>>> main -->
           </div>
         </div>
       </div>
@@ -571,6 +575,7 @@
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
+			  <li><a href="status.html" class="py-1 d-block">check status</a></li>
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
