--- a/contact.html
+++ b/contact.html
@@ -112,8 +112,8 @@
 												
 												<div class="col-md-6">
 													<div class="form-group">
-														<label class="label" for="subject">Investment</label>
-														<input type="text" class="form-control" name="investment" id="investment" placeholder="Investment">
+														<label class="label" for="subject">Enter Your Query</label>
+														<input type="text" class="form-control" name="investment" id="investment" placeholder="Query">
 													</div>
 												</div>
 												<div class="col-md-12">
@@ -193,7 +193,11 @@
               <li><a href="about.html" class="py-1 d-block">About</a></li>
               <li><a href="contact.html" class="py-1 d-block">Apply Online</a></li>
               <li><a href="#" class="py-1 d-block">Franchise Benefits</a></li>
+<!-- <<<<<<< main -->
+							<li class="nav-item"><a href="status.html" class="nav-link">Check Status</a></li>
+<!-- ======= -->
 			  <li><a href="status.html" class="py-1 d-block">check status</a></li>
+<!-- >>>>>>> touhidbackend -->
 			  <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
